--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,10 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'se.emilsjolander:stickylistheaders:2.7.0'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
+
 
 }
