--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
-    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
-
+    implementation 'com.google.android.material:material:1.5.0'
 
 }
